--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Star Wars Responsive Challenge</title>
-
+  <meta charset="utf-8" name="description" content="responsive starwars Challenge">
   <!-- Responsive viewport tag, tells small screens that it's responsive -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -14,9 +14,76 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 
   <!-- Stylesheets -->
-
+  <link rel="stylesheet" href="css/float-grid.css" />
+  <link rel="stylesheet" href="css/main.css" />
 </head>
 <body>
-
+  <header>
+  <div class="row">
+    <div class="col-12">
+      <h1>Star Wars Characters</h1>
+      <p>Incomplete list</p>
+    </div>
+  </div>
+  </header>
+  <div class="row">
+      <div class="col-4">
+        
+        <div class="detail">
+        <img src="images/rey_square.png">
+        <div class="card">
+        <h3>Ray</h3>
+        <h5>Protagonist, from Tatooine</h5>
+        </div>
+        </div>
+      </div>
+      <div class="col-4">
+        <div class="detail">
+        <img src="images/finn_square.png">
+        <div class="card">
+        <h3>Finn</h3>
+        <h5>Storm Trooper, befriends Ray</h5>
+        </div>
+        </div>
+      </div>
+      <div class="col-4">
+        <div class="detail">
+        <img src="images/kylo_square.png">
+        <div class="card">
+        <h3>Kylo</h3>
+        <h5>Main villain, or is he?</h5>
+        </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-4">
+        <div class="detail">
+        <img src="images/poe_square.png">
+        <div class="card">
+        <h3>Poe</h3>
+        <h5>Neutral pilot</h5>
+        </div>
+        </div>
+      </div>
+      <div class="col-4">
+        <div class="detail">
+        <img src="images/chewbacca_square.png">
+        <div class="card">
+        <h3>Chewbacca</h3>
+        <h5>A great first mate</h5>
+        </div>
+        </div>
+      </div>
+      <div class="col-4">
+        <div class="detail">
+        <img src="images/yoda_square.png">
+        <div class="card">
+        <h3>Yoda</h3>
+        <h5>Wise old Jedi master</h5>
+        </div>
+        </div>
+      </div>
+    </div>
 </body>
 </html>
